Trying to fix the loading screen on mobile devices

--- a/style.css
+++ b/style.css
@@ -634,4 +634,8 @@ a:hover {
     .mainH1 {
         margin-top: 14%;
     }
+    body {
+        width: 100%;
+        height: 1000px;
+    }
 }
